--- a/pages/5s/5s_detail/5s_detail.wxml
+++ b/pages/5s/5s_detail/5s_detail.wxml
@@ -26,7 +26,7 @@
   ></map>
   <view  style='margin-top:30rpx;'>
     <view class='map' style='float:right;margin-top:14rpx;' catchtap='openLocation' data-name='{{fives.fivesName}}' data-address='{{fives.addrDetail}}' data-lng='{{fives.addrLng}}' data-lat='{{fives.addrLat}}'>导航</view>
-    <view class='text'>{{fives.addrDetail}}</view>
+    <view class='text' style='white-space:nowrap;overflow:hidden;text-overflow:ellipsis;width:542rpx'>{{fives.addrDetail}}</view>
     <view class='text' wx:if="{{'附近' != fives.distance}}">距您大约有{{fives.distance}}</view>
     <view class='text' wx:else>位置在您附近</view>
   </view>
