--- a/pages/course/course_detail/course_detail.wxml
+++ b/pages/course/course_detail/course_detail.wxml
@@ -1,4 +1,8 @@
-<view class='article-box'>
+<view class='article-box' style='margin-bottom:90rpx;padding:0'>
   <view class='text' style='margin-bottom:30rpx;' wx:if="{{course.courseContent}}">{{course.courseContent}}</view>
   <image wx:for="{{course.pisLs}}" wx:key="resId" class='thumb' mode="widthFix" style='display:flex;' src='{{item.picUrl}}'></image>
 </view>
+
+<navigator url='../course_classify_detail/course_classify_detail?courseId={{course.classifyId}}' hover-class="none">
+<button class='pay-bnt'>专题详情</button>
+</navigator>
