--- a/pages/my/my_set_edit/my_set_edit.wxml
+++ b/pages/my/my_set_edit/my_set_edit.wxml
@@ -8,5 +8,16 @@
     <label>手机号：</label>
      <input type='text' class='text' value='{{member.phoneNo}}' bindinput='inputPhoneNo'></input>
   </view>
+   <view class='item-box'>
+    <label>区域：</label>
+     <picker mode="region" bindchange="bindRegionChange" value="{{region}}">
+        <view class="picker" style='font-size:28rpx;line-height:60rpx;padding-left:124rpx;' wx:if="{{region[2]}}">
+          {{region[0]}}，{{region[1]}}，{{region[2]}}
+        </view>
+        <view class="picker" style='font-size:28rpx;line-height:60rpx;padding-left:124rpx;' wx:else>
+          点击选择一个区域
+        </view>
+      </picker>
+  </view>
 </view>
 <button bindtap='toSubmitForm' class='pay-bnt'>提交</button>
